Set up height for dynamic grid cells

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ button:active {
 /* DOM grid cell setting */
 .cell {
     padding-bottom: 100%;
+    height: 0; 
     background-color: #ffffff;
 }
 
